Add tasks filtering
